[package]
name = "main-run"
version = "0.1.0"
authors = ["dangcheng <dangcheng@hotmail.com>"]

[dependencies]
sincere = { path = "../sincere" }
sincere_token = "0.1"
mon = "0.2"
lazy_static = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_bytes = "0.10"
ring = "0.12"
chrono = "0.4"
postgres = "0.15"

[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]
