[package]
name = "main-run"
version = "0.1.0"
authors = ["dangcheng <dangcheng@hotmail.com>"]
edition = "2018"

[dependencies]
sincere = "0.6"
sincere_token = "0.1"
mongors = "0.2"
lazy_static = "1.2"
serde = "1.0"
serde_derive = "1.0"
serde_bytes = "0.10"
ring = "0.13"
chrono = "0.4"
postgres = "0.15"
reqwest = "0.8"
qiniu = "0.1"
#string2 = { path = "../string" }

[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]
